# simple_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bsdf.cpp  camera.cpp  light.cpp  render.cpp  scene.cpp  surface.cpp  texture.cpp
headers/: bsdf.h  camera.h  common.h  interaction.h  light.h  random.h  render.h  scene.h  surface.h  texture.h  vec.h
